--- a/css/style.css
+++ b/css/style.css
@@ -177,9 +177,8 @@ a{color: var(--brand-primary);}
 /*** Header ***/
 .header {
     background: #000;
-    padding: 15px 0;
     position: fixed;
-    z-index: 99;
+    z-index: 999999;
     top: 0;
     left: 0;
     width: 100%;
@@ -187,6 +186,10 @@ a{color: var(--brand-primary);}
 .header .container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    position: relative;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .header .container a.logo {
     max-width: 230px;
@@ -228,17 +231,44 @@ a{color: var(--brand-primary);}
 .main-menu li:hover > ul{
     display: block;
 }
+/* Responsive */
+.header .main-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    z-index: 9;
+    left: 0;
+    background: #000;
+}
+.main-menu > ul > li{
+    margin-left: 0;
+}
+.main-menu > ul > li a {
+    padding: 1rem 1.6rem;
+    border-top: 1px solid #333;
+}
+.header .container .main-menu > ul{
+    flex-direction: column;
+}
+.main-menu > ul ul {
+    position: static;
+    padding-left: 15px;
+}
+
 
 /*** Mobile Menu ***/
 .mobile-menu-btn{
-    display: none;
     color: #fff;
     margin-left: 2rem;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 .mobile-menu-btn svg{
     fill: currentColor;
     width: 1.5rem;
     height: 1.5rem;
+    margin-left: 0.8rem;
 }
 
 /*** Content Section ***/
@@ -280,7 +310,7 @@ a{color: var(--brand-primary);}
     overflow: auto;
 }
 .chart-wrapper #chart{
-    min-width: 500px;
+    min-width: 400px;
 }
 
 /*** Tables ***/
@@ -357,6 +387,7 @@ svg.icons.md{font-size: 1.2rem;}
 /**** Responsive *****/
 /*********************/
 
+.d-block{display: block;}
 
 @media only screen and (max-width: 1280px){
 
@@ -366,6 +397,7 @@ svg.icons.md{font-size: 1.2rem;}
 
     html{font-size: 14px;}
 
+    .d-lg-none{display: none;}
 }
 
 @media only screen and (max-width: 992px){
@@ -408,29 +440,7 @@ svg.icons.md{font-size: 1.2rem;}
         justify-content: space-between;
     }
 
-    .mobile-menu-btn{display: block;}
-    .header .main-menu{
-        display: none;
-        position: absolute;
-        top: 100%;
-        z-index: 9;
-        left: 0;
-        background: #000;
-    }
-    .main-menu > ul > li{
-        margin-left: 0;
-    }
-    .main-menu > ul > li a {
-        padding: 1rem 0.6rem;
-        border-top: 1px solid #333;
-    }
-    .header .container .main-menu > ul{
-        flex-direction: column;
-    }
-    .main-menu > ul ul {
-        position: static;
-        padding-left: 15px;
-    }
+    
 }
 
 @media only screen and (max-width: 640px){
