--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ svg.icons.md{font-size: 1.2rem;}
 /**** Responsive *****/
 /*********************/
 
-.d-block{display: block;}
+.d-inline-block{display: inline-block;}
 
 @media only screen and (max-width: 1280px){
 
